# lurch

./: .appveyor.yml  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  copy_dll_closure.sh  makefile
.github/: dependabot.yml
.github/workflows/: linux.yml  windows.yml
debian/: README  README.Debian  README.source  changelog  control  copyright  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  pidgin-plugin-lurch.cron.d.ex  pidgin-plugin-lurch.default.ex  pidgin-plugin-lurch.doc-base.EX  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local  watch.ex
src/: lurch.c  lurch.h  lurch_api.c  lurch_api.h  lurch_cmd_ui.c  lurch_cmd_ui.h  lurch_crypto.c  lurch_crypto.h  lurch_util.c  lurch_util.h
test/: test_lurch_api.c  test_lurch_crypto.c  test_lurch_loadable.c  test_lurch_util.c
